--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "pel"
 version = "0.1.0"
-description = ""
-authors = ["James Mishra <james.mishra@neocrym.com>"]
+description = "The most elegant build system."
+authors = ["Neocrym Records Inc. <engineering@neocrym.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
@@ -45,9 +45,6 @@ skip = [".git", ".mypy_cache", ".venv", "venv", "_vendor"]
 
 [tool.mypy]
 python_version = "3.8"
-#warn_return_any = true
-#warn_unused_configs = true
-#ignore_missing_imports = true
 follow_imports = "silent"
 strict = true
 exclude = [
