--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,11 @@ exclude = '''
 '''
 [tool.isort]
 known_first_party = ["pel"]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 88
 skip = [".git", ".mypy_cache", ".venv", "venv", "_vendor"]
 
 
