Allow for depending on a list of filesystem dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,4 +83,7 @@ disable = [
   'protected-access',
   'wildcard-import',
   'unused-wildcard-import',
+  'no-self-use',
+  'too-many-instance-attributes',
+  'duplicate-code'
 ]
